--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  font-family: 'Quicksand';
+}
+/* Footer Header(s) */
+.ui, .inverted, .header {
+  font-family: 'Quicksand' !important;
+}
