--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,10 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 * {
   font-family: 'Quicksand';
 }
 /* Footer Header(s) */
 .ui, .inverted, .header {
   font-family: 'Quicksand' !important;
+}
+body {
+  background-color: #F0F0F0 !important;
 }
